tests/ui/macros/issue-6596-1.rs
macro_rules! e {
    ($inp:ident) => (
        $nonexistent
        //~^ ERROR expected expression, found `$`
    );
}

fn main() {
    e!(foo);
}
